Test: Django 테스트 유틸리티 확인

--- a/counter/templates/counter/index.html
+++ b/counter/templates/counter/index.html
@@ -5,6 +5,12 @@
     <title> hello counter </title>
   </head>
   <body>
+    <div>
+      <a href="">login</a>
+    </div>
+    
+    <hr>
+    
     {% for counter in counters %}
     <div>
       <div>
